--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -91,7 +91,7 @@ header {
   li {
     display: inline-block;
     padding-left: 10px;
-    color: $secondary-color;
+    color: $faded-color;
 
     a {
       color: $link-hover-color;
