--- a/app/views/grounds/_option_dropdown.html.erb
+++ b/app/views/grounds/_option_dropdown.html.erb
@@ -6,7 +6,7 @@
 
 </a>
 
-<ul id=<%= "#{option}-dropdown" %> data-dropdown-content class="dropdown-items">
+<ul id=<%= "#{option}-dropdown" %> data-dropdown-content class="dropdown-list">
 
   <% @ground.options(option).each do |code, label| %>
 
