--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -45,7 +45,7 @@
 
   <center>
 
-    <%= image_tag('https://secure.gravatar.com/avatar/6b030f9d40af0aacef77ba4ba2076985?s=128', alt: 'Adrien Folie', class: 'rounded-img') %>
+    <%= gravatar_tag('folie.adrien@gmail.com', alt: 'Adrien Folie', class: 'rounded-img') %>
 
     <h5>ADRIEN FOLIE</h5>
 
