cleanup ground decorator

--- a/app/views/grounds/show.html.erb
+++ b/app/views/grounds/show.html.erb
@@ -19,7 +19,7 @@
 
   </div>
 
-  <%= content_tag(:div, @ground.code, id: :ground_editor, class: 'editor-body', data: @ground.data) %>
+  <%= content_tag(:div, @ground.code, id: :ground_editor, class: 'editor-body', data: @ground.editor_data) %>
 
 </div>
 
