allow output on stdout/stderr to be scrollable on y axis

--- a/app/assets/stylesheets/ground.css.scss
+++ b/app/assets/stylesheets/ground.css.scss
@@ -27,6 +27,9 @@ $editor-size: rem-calc(400);
   @extend .rounded;
   @extend .top-buffer;
 
+  overflow: auto;
+  overflow-y: hidden;
+
   .waiting {
     color: $link-hover-color;
   }
