rename some variables

--- a/app/views/grounds/_shortcuts.html.erb
+++ b/app/views/grounds/_shortcuts.html.erb
@@ -1,4 +1,4 @@
-<% id = "#{of}-dropdown" %>
+<% id = "#{of}-shortcuts" %>
 
 <%= button_tag(type: 'button', class: 'button', data: { dropdown: id },
                html: { 'aria-controls' => id,
