change switch option from put to post request
to be compliant with rest API on non RESTful call.

--- a/app/views/grounds/_option_dropdown.html.erb
+++ b/app/views/grounds/_option_dropdown.html.erb
@@ -18,7 +18,7 @@
                 ground_switch_option_path(option: "#{option}", code: code),
                 data: { "#{option}" => code },
                 class: "#{option}-selection",
-                method: :put,
+                method: :post,
                 remote: true) %>
 
     </li>
