Addition of piwik gem

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,46 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title><%= content_for?(:title) ? yield(:title) : t('site.title') %></title>
+  <title><%= content_for?(:title) ? yield(:title) : t('site.title') %></title>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-    <%= javascript_include_tag 'modernizr' %>
-    <%= csrf_meta_tag %>
-  </head>
+  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'modernizr' %>
+  <%= csrf_meta_tag %>
+</head>
 
-  <body>
+<body>
 
-    <section class="off-canvas-wrap" data-offcanvas>
+  <section class="off-canvas-wrap" data-offcanvas>
 
-      <section class="inner-wrap">
+    <section class="inner-wrap">
 
-        <%= render 'layouts/sidemenu' %>
+      <%= render 'layouts/sidemenu' %>
 
-        <section class="main-content" role="page">
+      <section class="main-content" role="page">
 
-          <header>
+        <header>
 
-            <%= render 'layouts/header' %>
+          <%= render 'layouts/header' %>
 
-          </header>
+        </header>
 
-          <%= yield %>
+        <%= yield %>
 
-          <footer>
+        <footer>
 
-            <%= render 'layouts/footer' %>
+          <%= render 'layouts/footer' %>
 
-          </footer>
-
-        </section>
+        </footer>
 
       </section>
 
     </section>
 
-  </body>
+  </section>
+  <%= piwik_tracking_tag %>
+</body>
 </html>
