change adrien twitter handle

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -71,7 +71,7 @@
     role: 'Creator / Lead Developer',
     gravatar: 'folie.adrien@gmail.com',
     github: 'https://github.com/folieadrien',
-    twitter: 'https://twitter.com/folie_a',
+    twitter: 'https://twitter.com/folieadrien',
     linkedin: 'http://fr.linkedin.com/in/adrienfolie/'
   %>
 
